fixed photo bug, fixed spacing on form, fixed free cooks for projects

--- a/react-app/src/components/NewRecipe/RecipeForm.css
+++ b/react-app/src/components/NewRecipe/RecipeForm.css
@@ -68,7 +68,8 @@
     border: 1px solid var(--green);
     padding: 30px;
     border-radius: 15px;
-    width: 80%;
+    width: 90%;
+    max-width: 1227px;
 }
 
 .ol-input > .description ~ label {
@@ -95,10 +96,10 @@
     border: 1px solid var(--green);
     resize: none;
     max-height: 50vh;
-    max-width: 808px;
+    max-width: 782px;
     color: var(--green);
     height: 2.7rem;
-    width: 87%;
+    width: 83.7%;
     outline: 1px solid var(--green);
     border-radius: 5px;
     border: none;
@@ -208,7 +209,7 @@ input::placeholder {
     resize: none;
     max-height: 50vh;
     color: var(--green);
-    width: 25em;
+    width: 100%;
     outline: 1px solid var(--green);
     border-radius: 5px;
     border: none;
@@ -222,7 +223,7 @@ input::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 48%;
     max-height: 405px;
 }
 
@@ -248,6 +249,7 @@ input::placeholder {
     height: 100%;
     background-position: center;
     background-size: cover;
+    border-radius: 5px;
 }
 
 .tags-container {
@@ -290,18 +292,22 @@ input::placeholder {
     position: relative;
     background-color: white;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .season-select select {
     font-size: 1rem;
     font-weight: normal;
     max-width: 100%;
-    padding: 8px 24px 8px 10px;
+    padding: 10px 15px 10px 15px;
     border: none;
     background-color: transparent;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    text-align: center;
 }
 
 .season-select select:active, .season-select select:focus {
@@ -319,4 +325,8 @@ input::placeholder {
   margin-top: -2px;
   border-right: 5px solid transparent;
   border-left: 5px solid transparent;
+}
+
+.component-container {
+    width: 48%;
 }
