--- a/react-app/src/components/SingleRecipePage/SingleRecipePage.css
+++ b/react-app/src/components/SingleRecipePage/SingleRecipePage.css
@@ -96,18 +96,20 @@
     flex-direction: column;
 }
 
-.srp-button1 {
-    font-size: 40px;
+.srp-button1{
+    font-size: 23px;
     color: var(--green);
     margin-left: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    color: var(--gold);
 }
 
 .srp-button2 {
-    font-size: 50px;
+    font-size: 30px;
     cursor: pointer;
     margin-left: 5px;
+    color: var(--gold);
 }
 
 .srp-delete {
